<resources>
    <string name="app_name">Carmina</string>
    <string name="bottom_navigation_title_home">Home</string>
    <string name="bottom_navigation_title_player">Player</string>
    <string name="bottom_navigation_title_library">Library</string>
    <string name="terms">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="music_is_life">Music is love, Music is life!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="add">Add</string>
    <string name="no">No</string>
    <string name="reset">Reset</string>
    <string name="are_u_sure">Are you sure?</string>
    <string name="licenses">Licenses</string>
    <string name="added_to_q">Added to queue\u0020 </string>
    <string name="playing_next">Playing next\u0020 </string>
    <string name="track">track</string>
    <string name="tracks">\u0020tracks</string>
    <string name="albums">\u0020albums</string>
    <string name="create_playlist">Create new playlist</string>
    <string name="enable_now">Enable Now</string>
    <string name="tab_album">Album</string>
    <string name="tab_track">Track</string>
    <string name="tab_artist">Artist</string>
    <string name="tab_genre">Genre</string>
    <string name="tab_playlist">Playlist</string>
    <string name="tab_folder">Folder</string>
    <string name="tab_title">Title</string>
    <string name="nav_remove_ads">Remove Ads</string>
    <string name="nav_rewards">Rewards</string>
    <string name="nav_sleep_timer">Sleep Timer</string>
    <string name="nav_share">Share</string>
    <string name="receiver_searching">Searching receiver...</string>
    <string name="nav_scan">Scan</string>
    <string name="nav_rate">Rate in store</string>
    <string name="nav_feature_request">Feature Request</string>
    <string name="nav_social">We are Social!</string>
    <string name="nav_website">Visit Website</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout">Sign Out</string>
    <string name="nav_login">Sign Up</string>
    <string name="menu_search">Search</string>
    <string name="menu_sort_by">Sort by</string>
    <string name="action_play">Play</string>
    <string name="action_add_to_playlist">Add to Playlist</string>
    <string name="action_edit_track_info">Edit Track info</string>
    <string name="action_clear_offline_lyrics">Clear Lyrics</string>
    <string name="action_wrong_lyrics">Alternate Lyric Source</string>
    <string name="action_share_offline_lyrics">Share Lyrics</string>
    <string name="action_switch_offline_lyrics">Switch Lyrics Mode</string>
    <string name="action_exclude_from_library">Exclude from library</string>
    <string name="action_edit_info">Edit info</string>
    <string name="action_track_info">Track info</string>
    <string name="action_share_file">Share music file</string>
    <string name="action_delete">Delete</string>
    <string name="action_go_to_artist">Go to Artist</string>
    <string name="action_go_to_album">Go to Album</string>
    <string name="action_fav">Fav</string>
    <string name="action_equ">Equalizer</string>
    <string name="action_scan">Scan</string>
    <string name="action_play_next">Play Next</string>
    <string name="action_add_to_q">Add to Queue</string>
    <string name="action_set_as_ringtone">Set as Ringtone</string>
    <string name="action_settings">Settings</string>
    <string name="action_shuffle_all">Shuffle All</string>
    <string name="action_refresh_library">Refresh Library</string>
    <string name="action_save">Save</string>
    <string name="action_share">Share</string>
    <string name="action_sync_problem">Sync problem?</string>
    <string name="action_reload">Reload</string>
    <string name="action_call_for_help">Call for help *new*</string>
    <string name="action_licenses">Licenses</string>
    <string name="action_terms_of_use">Terms of Use</string>
    <string name="action_feedback">Provide Feedback</string>
    <string name="action_support_dev">Support Development</string>
    <string name="action_sort_name">By Name</string>
    <string name="action_sort_year">By Year"</string>
    <string name="action_sort_size">By Size</string>
    <string name="action_sort_no_of_album">By No. of Albums</string>
    <string name="action_sort_no_of_tracks">By No. of Tracks</string>
    <string name="action_sort_by_duration">By Duration</string>
    <string name="action_sort_asc">Asc</string>
    <string name="abm_song_name_mini_player">Empty queue</string>
    <string name="invite_text">Invite one of your friend to Carmina Music and enjoy ad-free experience lifetime. \n\n
            Please note, invitation is successful only on new install. If person you invited already has Carmina Music installed, it will not work.
        </string>
    <string name="invite_friends_title">Invite Friends</string>
    <string name="invitation_sent">Invitation sent</string>
    <string name="invite_more">Invite More</string>
    <string name="invite_now">Invite Now</string>
    <string name="error_invitation_not_sent">Invitation not sent, Please try again!</string>
    <string name="pref_sent_invittions">pref_sent_invitations</string>
    <string name="referral_succeessful">Referral successful! You can remove ads for free by referring one of your friend to Carmina Music.</string>
    <string name="main_act_empty_lib">No Music found in Library!</string>
    <string name="main_act_lib_refreshed">Library Refreshed</string>
    <string name="playlist_error_1">Playlist name cannot begin with digit</string>
    <string name="playlist_error_2">Enter at least 3 characters</string>
    <string name="playlist_error_3">Only alphanumeric characters allowed</string>
    <string name="error_opening_browser">Unable to open browser!</string>
    <string name="sleep_timer_discarded">Sleep timer discarded</string>
    <string name="sleep_timer_successfully_set">Music will be stopped in \u0020</string>
    <string name="nothing_to_play">Nothing to play!</string>
    <string name="music_is_locked">Music is Locked!</string>
    <string name="empty_track_list">Empty Track List</string>
    <string name="empty_play_list">Empty Play List</string>
    <string name="play_list_created">Playlist created</string>
    <string name="play_list_already_exists">Playlist already exists</string>
    <string name="playlist_saved">Playlist saved</string>
    <string name="signed_out">Signed out</string>
    <string name="network_error">Network Error, try again later!</string>
    <string name="unknown_error">Unknown Error, try again later!</string>
    <string name="error_invalid_url">Invalid URL!</string>
    <string name="art_info_not_available">Artist info not available at the moment, try again later</string>
    <string name="lyrics_saved">Lyrics saved</string>
    <string name="lyrics_removed">Lyrics Removed</string>
    <string name="error_unable_to_share">Sorry, Unable to share this file</string>
    <string name="preview_player_server_died">Server has died!</string>
    <string name="preview_player_io_error">I/O error!</string>
    <string name="preview_player_malform_media">Malformed media!</string>
    <string name="preview_player_invalid">Not valid for progressive playback!</string>
    <string name="preview_player_time_out">Media server timed out!</string>
    <string name="preview_player_unsupported">Media is unsupported!</string>
    <string name="preview_player_unknown">An unknown error has occurred:</string>
    <string name="te_error_saving_tags">Error while saving tags!</string>
    <string name="te_error_empty_field">Cannot leave field empty!</string>
    <string name="te_error_image_load">Error loading image, Please try another one</string>
    <string name="error_no_lyrics">No Lyrics Found!</string>
    <string name="error_sharing_lyrics">Error sharing lyrics!</string>
    <string name="error_nothing_to_fav">Nothing to set fav</string>
    <string name="error_no_equlizer">No equalizer application found in device</string>
    <string name="error_nothing_to_share">Nothing to share!</string>
    <string name="error_batch_download_running">Batch download already running!</string>
    <string name="change_tags_to_update">Please change tags to update!</string>
    <string name="no_music_found">No music found. Play some Music for artist information to be displayed.</string>
    <string name="no_music_found_lyrics">No music found. Play some Music for lyrics to be displayed.</string>
    <string name="phone_stat_perm_required">Phone state: For controlling playback during calls.</string>
    <string name="storage_perm_required">Storage: To access device storage and any SD cards to browse and play CARX media files.</string>
    <string name="ads_already_removed">You already have removed the ads!</string>
    <string name="ads_removed">You have removed the ads! Voila</string>
    <string name="ads_still_showing">If you still see the ads, please restart the app!</string>
    <string name="error_something_wrong">Something went wrong!</string>
    <string name="error_trans_failed">Transaction failed!</string>
    <string name="batch_download_started">Batch download started in Background!</string>
    <string name="song_is_playing">One of the song is playing currently</string>
    <string name="unable_to_del">Unable to delete, Permission Denied</string>
    <string name="cannot_del">Cannot delete \u0020 </string>
    <string name="no_info_available">No info available at the moment!</string>
    <string name="song_already_exists_in">Songs already exists in \u0020</string>
    <string name="songs_added_in">Song(s) added in \u0020</string>
    <string name="removed_from_playlist">Removed from playlist</string>
    <string name="error_removing">Error occurred while removing</string>
    <string name="deleted">Deleted \u0020</string>
    <string name="error_playing_track">Something wrong! Track may be deleted or storage is not available at this time</string>
    <string name="error_adding_song_to_q">Error adding song to queue</string>
    <string name="timer_over">Timer Over</string>
    <string name="error_saving_instant_lyrics">Error saving lyrics!</string>
    <string name="instant_lyric_saved">Lyrics saved</string>
    <string name="instant_lyric_already_saved">Lyrics already saved!</string>
    <string name="toast_artist_cache_complete">Artist info local caching complete</string>
    <string name="first_launch_lyric_card_no_internet">Internet is needed for loading images for cards. Images will be downloaded once and will be cached for later use.</string>
    <string name="first_launch_lyric_card">First launch might take a while for loading images from our servers. Subsequent launches should work lightning fast!</string>
    <string name="share_lyric_card_extra_text"><![CDATA[Created using Carmina Music ]]></string>
    <string name="share_file_extra_text"><![CDATA[Shared using Carmina Music]]></string>
    <string name="empty_message">No devices found. Turn on P2P and perform discovery from the Action Bar</string>
    <string name="label_me">ME</string>
    <string name="label_peers">PEERS</string>
    <string name="main_act_sleep_timer_title">Sleep Timer</string>
    <string name="close">close</string>
    <string name="empty_queue">Empty Queue</string>
    <string name="title_about_us">About </string>
    <string name="transition">transition</string>
    <string name="secondary_transition">sec_transition</string>
</resources>