<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/navigation_home">

    <fragment
            android:id="@+id/navigation_home"
            android:name="au.com.carmina.ui.home.HomeFragment"
            android:label="@string/bottom_navigation_title_home"
            tools:layout="@layout/fragment_home"/>

    <fragment
            android:id="@+id/navigation_dashboard"
            android:name="au.com.carmina.ui.dashboard.DashboardFragment"
            android:label="@string/bottom_navigation_title_player"
            tools:layout="@layout/fragment_dashboard"/>

    <fragment
            android:id="@+id/navigation_notifications"
            android:name="au.com.carmina.ui.notifications.NotificationsFragment"
            android:label="@string/bottom_navigation_title_library"
            tools:layout="@layout/fragment_notifications"/>
</navigation>