<?xml version="1.0" encoding="utf-8"?>

<au.com.carmina.radarviewscan.ContentRadarLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/alert_sender"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/homebg"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="3dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="@color/whitealpha90"
            android:text="@string/label_me" />
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:gravity="center_vertical"
            android:background="@android:color/holo_blue_light" />

        <!-- Self information -->
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:background="?android:attr/activatedBackgroundIndicator"
            android:padding="3dip">
            <ImageView
                android:id="@+id/icon"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginRight="2dp"
                android:src="@drawable/machine" />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:weightSum="100"
                android:layout_height="fill_parent">
                <TextView
                    android:id="@+id/my_name"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="50"
                    android:textColor="@color/whitealpha90"
                    android:gravity="center_vertical" />
                <TextView
                    android:id="@+id/my_status"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="50"
                    android:textColor="@color/whitealpha90"
                    android:singleLine="true"
                    android:ellipsize="marquee" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/label_peers"
            android:textColor="@color/whitealpha90"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:gravity="center_vertical"
            android:background="@android:color/holo_blue_light" />

        <!-- Available peers -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="360dp"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp"
            android:visibility="visible"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <au.com.carmina.radarviewscan.RadarScanView
                android:id="@+id/radarView"
                android:layout_width="340dp"
                android:layout_height="340dp"
                android:layout_centerInParent="true"/>
            <au.com.carmina.radarviewscan.RandomFabTickView
                android:id="@+id/random_imgview"
                android:layout_width="match_parent"
                android:layout_height="380dp"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

            </au.com.carmina.radarviewscan.RandomFabTickView>

            <TextView
                android:id="@+id/wifiname"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:gravity="center"
                android:layout_alignParentRight="true"
                android:layout_marginTop="80dp"
                android:layout_marginRight="20dp"
                android:text=""
                android:textColor="@color/whitealpha90"/>


            <ImageView
                android:id="@+id/qr_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:contentDescription="@string/app_name" />


        </RelativeLayout>

        <ListView
            android:id="@id/android:list"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:drawSelectorOnTop="false" />

        <ImageView
            android:id="@+id/scan_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:visibility="gone"
            android:src="@drawable/scan_qrcode_64"
            android:tint="@color/white"
            android:scaleType="centerCrop"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@id/android:empty"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="match_parent"
            android:text="@string/empty_message" />
    </LinearLayout>

</au.com.carmina.radarviewscan.ContentRadarLayout>
