<?xml version="1.0" encoding="utf-8"?>
<!--suppress ALL -->
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_view_secondary_lib"
    tools:context="com.smartboxmedia.carminamusic.au.smartboxmedia.carminamusic.activity.ActivitySecondaryLibrary"
    android:fitsSystemWindows="true"
    android:background="@drawable/homebg"
    android:theme="@style/AppTheme.AppBarOverlay"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout_secondary_library"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay.MenuBlue"
        android:background="@color/colorTransparent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/main.collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:expandedTitleMarginStart="@dimen/sl_expanded_title_margin_start"
            app:expandedTitleMarginEnd="@dimen/sl_expanded_title_margin_end"
            android:persistentDrawingCache="none"
            app:contentScrim="@color/colorPrimary"
            android:background="@color/colorTransparent"
            android:fitsSystemWindows="true"
            >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/sl_image_dimen"
                app:layout_collapseMode="parallax"
                android:fitsSystemWindows="true">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/main_backdrop"
                    android:transitionName="@string/secondary_transition"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:civ_border_color="@color/White"
                    app:civ_border_width="@dimen/_1sdp"
                    android:layout_margin="@dimen/_50sdp"
                    tools:ignore="UnusedAttribute"
                    android:scaleType="centerCrop">
                </de.hdodenhof.circleimageview.CircleImageView>
                <!--<ImageView-->
                    <!--android:id="@+id/main_backdrop"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:transitionName="@string/secondary_transition"-->
                    <!--android:scaleType="centerCrop"-->
                    <!--tools:ignore="ContentDescription,UnusedAttribute" />-->

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/secondary_image_gradient"/>

            </FrameLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_"
                android:theme="@style/ToolbarColoredBackArrow"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                android:layout_width="match_parent"
                android:layout_height="@dimen/action_bar_size"
                app:layout_collapseMode="pin"

                />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_right_side"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:layout_anchor="@id/app_bar_layout_secondary_library"
        app:layout_anchorGravity="bottom|end"
        android:src="@drawable/ic_shuffle_black_24dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--app:layout_behavior="@string/appbar_scrolling_view_behavior"-->

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/secondaryLibraryList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorTransparent"
            android:fadeScrollbars="true"
            android:isScrollContainer="true"
            android:paddingTop="20dp"
            android:scrollbars="vertical" />

        <LinearLayout
            android:id="@+id/border_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:visibility="gone"
            android:layout_alignParentTop="true"
            android:background="@drawable/border_2dp"
            android:orientation="horizontal"></LinearLayout>


    </RelativeLayout>


     <LinearLayout
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:elevation="12dp">


         <LinearLayout
             android:id="@+id/ad_view_wrapper"
             android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_gravity="bottom">

             <TextView
                 android:id="@+id/ad_close"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/close"
                 android:textColor="@color/colorwhite"
                 android:visibility="gone"
                 android:paddingEnd="15dp"
                 android:gravity="end"
                 android:textSize="15sp"
                 android:paddingRight="15dp"
                 tools:ignore="RtlSymmetry" />



         </LinearLayout>

         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:layout_margin="@dimen/ac_card_margin"
             app:cardCornerRadius="5dp"
             android:elevation="10dp"
             >

         <LinearLayout
            android:id="@+id/mini_player"
            android:layout_width="match_parent"
             android:padding="@dimen/_3sdp"
            android:layout_height="match_parent">
            <!--Icon of floating widget -->
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/album_art_mini_player"
                android:transitionName="@string/transition"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_batman_1"
                android:scaleType="centerCrop"
                tools:ignore="UnusedAttribute">
            </de.hdodenhof.circleimageview.CircleImageView>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="2"
                android:padding="@dimen/abm_title_and_art_padd_combined">

                <TextView
                    android:id="@+id/song_name_mini_player"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/empty_queue"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:textSize="@dimen/abm_mini_player_song"
                    android:scrollHorizontally="true"
                    android:maxLines="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/abm_title_and_art_padd"
                    android:paddingRight="@dimen/abm_title_and_art_padd"
                    android:fontFamily="@font/montserratregular"
                    android:textColor="@android:color/background_light"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:id="@+id/artist_mini_player"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/abm_mini_player_artist"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:scrollHorizontally="true"
                    android:layout_gravity="start|center_vertical"
                    android:maxLines="1"
                    android:fontFamily="@font/montserratregular"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/abm_title_and_art_padd"
                    android:paddingRight="@dimen/abm_title_and_art_padd"
                    android:textColor="@android:color/background_light"/>

            </LinearLayout>

            <ImageView
                android:id="@+id/play_pause_mini_player"
                android:layout_width="@dimen/_40sdp"
                android:layout_gravity="center"
                android:layout_height="@dimen/_40sdp"
                android:src="@drawable/ic_play_arrow_black_24dp"
                android:padding="@dimen/abm_play_next_padd"
                android:tint="@color/iconcolor"
                android:contentDescription="@string/app_name"
                android:background="?android:selectableItemBackground" />

            <ImageView
                android:id="@+id/next_mini_plaayrer"
                android:layout_width="@dimen/_38sdp"
                android:layout_height="@dimen/_38sdp"
                android:layout_gravity="center"
                android:src="@drawable/ic_skip_next_black_24dp"
                android:padding="@dimen/abm_play_next_padd"
                android:tint="@color/iconcolor"
                android:contentDescription="@string/app_name"
                android:background="?android:selectableItemBackground"
                android:backgroundTint="@android:color/background_light" />

        </LinearLayout>


         </androidx.cardview.widget.CardView>

    </LinearLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>


